crates/tui/snapshots/inline/help/shortcuts_conversation.snap
---
source: crates/tui/src/app/help_tests.rs
expression: "text(&render(&app, area))"
---
─ Keyboard shortcuts ───────────────────────────────────────────────────────────

  Compose                                 Session
  /                     Commands          ?          Keyboard shortcuts
  @                     Mention files     ←          Dashboard (empty input)
                        and plugins       Esc Esc    Open rewind checkpoints
  $                     Select a skill    esc        Interrupt task
  Enter                 Send message      shift+tab  Cycle task mode
  Shift+Enter / Ctrl+J  New line          shift+↓    Decrease thinking effort
  Ctrl+R                Search input      shift+↑    Increase thinking effort
                        history           ctrl+o     Copy last response
  ctrl+v                Attach            ctrl+c     Interrupt or quit
                        clipboard         ctrl+z     Suspend Ash
                        image

  Transcript
  PageUp / PageDown     Scroll
                        transcript
  Ctrl+Home / Ctrl+End  Oldest /
                        latest
  Ctrl+↑ / Ctrl+↓       Select a
                        message

  ↑/↓ scroll · Esc to close
