crates/tui/snapshots/inline/help/shortcuts_narrow_end.snap
---
source: crates/tui/src/app/help_tests.rs
expression: bottom
---
─ Keyboard shortcuts ───────────────────────

  ctrl+c     Interrupt or quit
  ctrl+z     Suspend Ash

  Transcript
  PageUp / PageDown     Scroll transcript
  Ctrl+Home / Ctrl+End  Oldest / latest
  Ctrl+↑ / Ctrl+↓       Select a message
  Space                 Expand selected
                        message
  Enter                 View selected
                        message details
  Esc                   Return to input

  /shortcuts customize

  ↑/↓ scroll · Esc to close
