crates/tui/snapshots/inline/help/shortcuts_narrow_start_chinese.snap
---
source: crates/tui/src/app/help_tests.rs
expression: "text(&render(&app, narrow))"
---
─ 键盘快捷键 ───────────────────────────────

  输入
  /                     命令
  @                     引用文件和插件
  $                     选择技能
  Enter                 发送消息
  Shift+Enter / Ctrl+J  换行
  Ctrl+R                搜索输入历史
  ctrl+v                附加剪贴板图片

  会话
  ?          键盘快捷键
  ←          仪表盘（空输入）
  Esc Esc    打开回退检查点
  esc        中断任务

  ↑/↓ 滚动 · Esc 关闭
