crates/tui/snapshots/inline/help/shortcuts_wide.snap
---
source: crates/tui/src/app/help_tests.rs
expression: output
---

    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   Automatic model
  ▝▜████▛▘   .
    ▝  ▘










─ Keyboard shortcuts ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

  Compose                                              Session                                              Transcript
  /                     Commands                       ?          Keyboard shortcuts                        PageUp / PageDown     Scroll transcript
  @                     Mention files and plugins      ←          Dashboard (empty input)                   Ctrl+Home / Ctrl+End  Oldest / latest
  $                     Select a skill                 Esc Esc    Open rewind checkpoints                   Ctrl+↑ / Ctrl+↓       Select a message
  Enter                 Send message                   esc        Interrupt task                            Space                 Expand selected message
  Shift+Enter / Ctrl+J  New line                       shift+tab  Cycle task mode                           Enter                 View selected message
  Ctrl+R                Search input history           shift+↓    Decrease thinking effort                                        details
  ctrl+v                Attach clipboard image         shift+↑    Increase thinking effort                  Esc                   Return to input
                                                       ctrl+o     Copy last response
                                                       ctrl+c     Interrupt or quit
                                                       ctrl+z     Suspend Ash

  /shortcuts customize

  ↑/↓ scroll · Esc to close
